pom-parser/src/snapshots/bind-2.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"55 := 47;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Infer,
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
