pom-parser/src/snapshots/bind-4.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"var: 55 = 47;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(1),
                            ty: Expr(
                                Id<Expr>(2),
                            ),
                            rhs: Some(
                                Id<Expr>(3),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 10,
                        end: 12,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
