pom-parser/src/snapshots/bind-5.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"var: u32;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(1),
                            ty: Expr(
                                Id<Expr>(2),
                            ),
                            rhs: None,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 5,
                        end: 8,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
