pom-parser/src/snapshots/bind_fn-3.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (x: u32) = x;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(1),
                                        kind: Expr(
                                            Id<Expr>(2),
                                        ),
                                        rhs: None,
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(3),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 19,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 10,
                        end: 13,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
