pom-parser/src/snapshots/bind_fn-4.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (a: u32 = 55) = {};\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(1),
                            ty: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(2),
                                        ty: Expr(
                                            Id<Expr>(3),
                                        ),
                                        rhs: Some(
                                            Id<Expr>(4),
                                        ),
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 25,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 10,
                        end: 13,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 16,
                        end: 18,
                    },
                },
                Expr {
                    kind: Block(
                        [],
                    ),
                    span: Span {
                        start: 22,
                        end: 24,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
