pom-parser/src/snapshots/bind_fn.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn = {};\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(1),
                            kind: Fn {
                                params: [],
                            },
                            rhs: Some(
                                Id<Expr>(2),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 11,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Block(
                        [],
                    ),
                    span: Span {
                        start: 8,
                        end: 10,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
