pom-parser/src/snapshots/block_stmt-3.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"{;}\")"
---
(
    Ast {
        items: [
            Id(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Block(
                        [],
                    ),
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
        exprs: Arena(
            [],
        ),
    },
    [
        Error {
            kind: UnexpectedToken {
                wanted: [
                    Bool,
                    Float,
                    Ident,
                    Int,
                    LBrace,
                    LParen,
                ],
                got: Token {
                    kind: Semicolon,
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            },
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
