pom-parser/src/snapshots/block_stmt.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"{55 + 47; 1 * 1;}\")"
---
(
    Ast {
        items: [
            Id<Stmt>(2),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(2),
                    ),
                    span: Span {
                        start: 1,
                        end: 9,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(5),
                    ),
                    span: Span {
                        start: 10,
                        end: 16,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 0,
                        end: 17,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(0),
                        op: Add,
                        rhs: Id<Expr>(1),
                    },
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 14,
                        end: 15,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Mul,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 10,
                        end: 15,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
