pom-parser/src/snapshots/call-2.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f(55);\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 0,
                        end: 6,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 2,
                        end: 4,
                    },
                },
                Expr {
                    kind: Call {
                        callable: Id<Expr>(1),
                        args: [
                            Id<Expr>(2),
                        ],
                    },
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
